--- a/index.html
+++ b/index.html
@@ -410,6 +410,66 @@
       options: ["Muž z ocele", "Muž z hory", "Muž z východu", "Muž z neba"],
       correct: 0
     },
+{
+                question: "Ktoré topánky sa stali ikonou 90. rokov a boli obľúbené medzi grunge fanúšikmi?",
+                options: ["Converse Chuck Taylor", "Dr. Martens", "Vans", "Timberland"],
+                correct: 1
+            },
+            {
+                question: "Ktorý internetový prehliadač bol dominantný v 90. rokoch?",
+                options: ["Internet Explorer", "Netscape Navigator", "Opera", "Mozilla Firefox"],
+                correct: 0
+            },
+            {
+                question: "V ktorom meste sa odohráva populárny seriál Friends?",
+                options: ["Chicago", "New York", "Los Angeles", "San Francisco"],
+                correct: 1
+            },
+            {
+                question: "Aký módny doplnok bol ikonický v 90. rokoch a nosil sa okolo krku?",
+                options: ["Náramky „slap bracelets“", "Plastové chokery", "Čelenky s flitrami", "Retiazky s príveskami"],
+                correct: 1
+            },
+            {
+                question: "Ktoré malé zberateľské figúrky s farebnými vláskami sa stali hitom 80. rokov?",
+                options: ["Beanie Babies", "Polly Pocket", "Troll Dolls", "My Little Pony"],
+                correct: 2
+            },
+            {
+                question: "Ktorá spoločnosť vydala prvý osobný počítač?",
+                options: ["Microsoft", "IBM", "Hewlett-Packard", "Apple"],
+                correct: 1
+            },
+            {
+                question: "Ktoré mesto hostilo podujatie Európske dni vtáctva v Mestskom parku v roku 2024?",
+                options: ["Prievidza", "Banská Bystrica", "Žilina", "Trenčín"],
+                correct: 3
+            },
+            {
+                question: "Ktorý belgický festival, považovaný za jeden z najväčších elektronických hudobných festivalov na svete, sa konal v júli 2024 v Boom?",
+                options: ["Pukkelpop", "Tomorrowland", "Rock Werchter", "Dour Festival"],
+                correct: 1
+            },
+            {
+                question: "Kde sa nachádza múzeum vagíny?",
+                options: ["Paríž", "Londýn", "Berlín", "Amsterdam"],
+                correct: 3
+            },
+            {
+                question: "Podľa čoho vznikol názov spoločnosti Starbucks?",
+                options: ["Podľa mesta v USA", "Podľa románu \"Biela veľryba\"", "Podľa zakladateľa spoločnosti", "Podľa hviezdy na oblohe"],
+                correct: 1
+            },
+            {
+                question: "Koľko zarobilo turné Taylor Swift \"Eras Tour\"?",
+                options: ["1 miliarda dolárov", "1,2 miliardy dolárov", "1,4 miliardy dolárov", "1,6 miliardy dolárov"],
+                correct: 2
+            },
+            {
+                question: "Aký je názov rakety vyvinutej SpaceX pre dopravu ľudí na Mars?",
+                options: ["Falcon 9", "Starship", "Dragon", "Saturn V"],
+                correct: 1
+            },
     {
       question: "Kedy bola oficiálne zahájená výstavba Transsibírskej magistrály?",
       options: ["1891", "1895", "1900", "1903"],
