--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
       options: ["Dánsko", "Holandsko", "Švédsko", "Nórsko"],
       correct: 1
     },
+           {
+                question: "Kde sa nachádza múzeum vagíny?",
+                options: ["Paríž", "Londýn", "Berlín", "Amsterdam"],
+                correct: 3
+            },
     {
       question: "Kto bol posledným panovníkom Rímskej ríše?",
       options: ["Nero", "Romulus Augustus", "Julius Caesar", "Augustus"],
@@ -265,6 +270,86 @@
       options: ["Ekonomické krízy", "Atentát na Františka Ferdinanda", "Rozpad Rímskej ríše", "Koloniálne vojny"],
       correct: 1
     },
+            {
+                question: "Kto je považovaný za otca umelej inteligencie?",
+                options: ["Alan Turing", "John McCarthy", "Marvin Minsky", "Herbert Simon"],
+                correct: 1
+            },
+            {
+                question: "„To infinity and beyond!“ je známa hláška z ktorého animovaného filmu?",
+                options: ["Hľadá sa Nemo", "Toy Story", "Zootopia", "Shrek"],
+                correct: 1
+            },
+            {
+                question: "Ktorý refrén obsahuje slová „I will survive“?",
+                options: ["Gloria Gaynor", "Diana Ross", "Tina Turner", "Aretha Franklin"],
+                correct: 0
+            },
+            {
+                question: "Kedy bol oficiálne uvedený na trh prvý model iPhone?",
+                options: ["2005", "2007", "2009", "2010"],
+                correct: 1
+            },
+            {
+                question: "Ktorý filozof povedal vetu „Cogito, ergo sum“ (Myslím, teda som)?",
+                options: ["René Descartes", "Immanuel Kant", "Friedrich Nietzsche", "Søren Kierkegaard"],
+                correct: 0
+            },
+            {
+                question: "Ktoré topánky sa stali ikonou 90. rokov a boli obľúbené medzi grunge fanúšikmi?",
+                options: ["Converse Chuck Taylor", "Dr. Martens", "Vans", "Timberland"],
+                correct: 1
+            },
+            {
+                question: "Ktorý internetový prehliadač bol dominantný v 90. rokoch?",
+                options: ["Internet Explorer", "Netscape Navigator", "Opera", "Mozilla Firefox"],
+                correct: 0
+            },
+            {
+                question: "V ktorom meste sa odohráva populárny seriál Friends?",
+                options: ["Chicago", "New York", "Los Angeles", "San Francisco"],
+                correct: 1
+            },
+            {
+                question: "Aký módny doplnok bol ikonický v 90. rokoch a nosil sa okolo krku?",
+                options: ["Náramky „slap bracelets“", "Plastové chokery", "Čelenky s flitrami", "Retiazky s príveskami"],
+                correct: 1
+            },
+            {
+                question: "Ktoré malé zberateľské figúrky s farebnými vláskami sa stali hitom 80. rokov?",
+                options: ["Beanie Babies", "Polly Pocket", "Troll Dolls", "My Little Pony"],
+                correct: 2
+            },
+            {
+                question: "Ktorá spoločnosť vydala prvý osobný počítač?",
+                options: ["Microsoft", "IBM", "Hewlett-Packard", "Apple"],
+                correct: 1
+            },
+            {
+                question: "Ktoré mesto hostilo podujatie Európske dni vtáctva v Mestskom parku v roku 2024?",
+                options: ["Prievidza", "Banská Bystrica", "Žilina", "Trenčín"],
+                correct: 3
+            },
+            {
+                question: "Ktorý belgický festival, považovaný za jeden z najväčších elektronických hudobných festivalov na svete, sa konal v júli 2024 v Boom?",
+                options: ["Pukkelpop", "Tomorrowland", "Rock Werchter", "Dour Festival"],
+                correct: 1
+            },
+             {
+                question: "Podľa čoho vznikol názov spoločnosti Starbucks?",
+                options: ["Podľa mesta v USA", "Podľa románu \"Biela veľryba\"", "Podľa zakladateľa spoločnosti", "Podľa hviezdy na oblohe"],
+                correct: 1
+            },
+            {
+                question: "Koľko zarobilo turné Taylor Swift \"Eras Tour\"?",
+                options: ["1 miliarda dolárov", "1,2 miliardy dolárov", "1,4 miliardy dolárov", "1,6 miliardy dolárov"],
+                correct: 2
+            },
+            {
+                question: "Aký je názov rakety vyvinutej SpaceX pre dopravu ľudí na Mars?",
+                options: ["Falcon 9", "Starship", "Dragon", "Saturn V"],
+                correct: 1
+            },
     {
       question: "Ktoré je najhlbšie miesto na Zemi?",
       options: ["Mariánska priekopa", "Puerto Rico priekopa", "Kermadec priekopa", "Tonga priekopa"],
@@ -410,66 +495,6 @@
       options: ["Muž z ocele", "Muž z hory", "Muž z východu", "Muž z neba"],
       correct: 0
     },
-{
-                question: "Ktoré topánky sa stali ikonou 90. rokov a boli obľúbené medzi grunge fanúšikmi?",
-                options: ["Converse Chuck Taylor", "Dr. Martens", "Vans", "Timberland"],
-                correct: 1
-            },
-            {
-                question: "Ktorý internetový prehliadač bol dominantný v 90. rokoch?",
-                options: ["Internet Explorer", "Netscape Navigator", "Opera", "Mozilla Firefox"],
-                correct: 0
-            },
-            {
-                question: "V ktorom meste sa odohráva populárny seriál Friends?",
-                options: ["Chicago", "New York", "Los Angeles", "San Francisco"],
-                correct: 1
-            },
-            {
-                question: "Aký módny doplnok bol ikonický v 90. rokoch a nosil sa okolo krku?",
-                options: ["Náramky „slap bracelets“", "Plastové chokery", "Čelenky s flitrami", "Retiazky s príveskami"],
-                correct: 1
-            },
-            {
-                question: "Ktoré malé zberateľské figúrky s farebnými vláskami sa stali hitom 80. rokov?",
-                options: ["Beanie Babies", "Polly Pocket", "Troll Dolls", "My Little Pony"],
-                correct: 2
-            },
-            {
-                question: "Ktorá spoločnosť vydala prvý osobný počítač?",
-                options: ["Microsoft", "IBM", "Hewlett-Packard", "Apple"],
-                correct: 1
-            },
-            {
-                question: "Ktoré mesto hostilo podujatie Európske dni vtáctva v Mestskom parku v roku 2024?",
-                options: ["Prievidza", "Banská Bystrica", "Žilina", "Trenčín"],
-                correct: 3
-            },
-            {
-                question: "Ktorý belgický festival, považovaný za jeden z najväčších elektronických hudobných festivalov na svete, sa konal v júli 2024 v Boom?",
-                options: ["Pukkelpop", "Tomorrowland", "Rock Werchter", "Dour Festival"],
-                correct: 1
-            },
-            {
-                question: "Kde sa nachádza múzeum vagíny?",
-                options: ["Paríž", "Londýn", "Berlín", "Amsterdam"],
-                correct: 3
-            },
-            {
-                question: "Podľa čoho vznikol názov spoločnosti Starbucks?",
-                options: ["Podľa mesta v USA", "Podľa románu \"Biela veľryba\"", "Podľa zakladateľa spoločnosti", "Podľa hviezdy na oblohe"],
-                correct: 1
-            },
-            {
-                question: "Koľko zarobilo turné Taylor Swift \"Eras Tour\"?",
-                options: ["1 miliarda dolárov", "1,2 miliardy dolárov", "1,4 miliardy dolárov", "1,6 miliardy dolárov"],
-                correct: 2
-            },
-            {
-                question: "Aký je názov rakety vyvinutej SpaceX pre dopravu ľudí na Mars?",
-                options: ["Falcon 9", "Starship", "Dragon", "Saturn V"],
-                correct: 1
-            },
     {
       question: "Kedy bola oficiálne zahájená výstavba Transsibírskej magistrály?",
       options: ["1891", "1895", "1900", "1903"],
