--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 correct: 1
             },
             {
-                question: "Ktorý refrén obsahuje slová „I will survive“?",
+                question: "Ktorá speváčka spieva refrén obsahujúci slová „I will survive“?",
                 options: ["Gloria Gaynor", "Diana Ross", "Tina Turner", "Aretha Franklin"],
                 correct: 0
             },
@@ -328,7 +328,7 @@
             {
                 question: "Ktoré mesto hostilo podujatie Európske dni vtáctva v Mestskom parku v roku 2024?",
                 options: ["Prievidza", "Banská Bystrica", "Žilina", "Trenčín"],
-                correct: 3
+                correct: 0
             },
             {
                 question: "Ktorý belgický festival, považovaný za jeden z najväčších elektronických hudobných festivalov na svete, sa konal v júli 2024 v Boom?",
@@ -342,8 +342,8 @@
             },
             {
                 question: "Koľko zarobilo turné Taylor Swift \"Eras Tour\"?",
-                options: ["1 miliarda dolárov", "1,2 miliardy dolárov", "1,4 miliardy dolárov", "1,6 miliardy dolárov"],
-                correct: 2
+                options: ["1,4 miliardy dolárov", "1,6 miliardy dolárov", "1,8 miliardy dolárov", "2 miliardy dolárov"],
+                correct: 3
             },
             {
                 question: "Aký je názov rakety vyvinutej SpaceX pre dopravu ľudí na Mars?",
@@ -396,12 +396,12 @@
       correct: 0
     },
     {
-      question: "Kto formuloval teóriu psychológie osobnosti, známa ako 'Big Five'?",
+      question: "Kto formuloval teóriu psychológie osobnosti, známu ako 'Big Five'?",
       options: ["Carl Jung", "Sigmund Freud", "Costa a McCrae", "Alfred Adler"],
       correct: 2
     },
     {
-      question: "Kto zaviedol pojem 'neviditeľná ruka' trhu?",
+      question: "Kto zaviedol pojem 'neviditeľná ruka trhu'?",
       options: ["Karl Marx", "Adam Smith", "John Maynard Keynes", "Milton Friedman"],
       correct: 1
     },
@@ -491,7 +491,7 @@
       correct: 2
     },
     {
-      question: "Aký význam má meno 'Stalin,' ktoré si Josif Džugašvili zvolil?",
+      question: "Aký význam má meno 'Stalin', ktoré si Josif Džugašvili zvolil?",
       options: ["Muž z ocele", "Muž z hory", "Muž z východu", "Muž z neba"],
       correct: 0
     },
