--- a/index.html
+++ b/index.html
@@ -506,7 +506,16 @@
       correct: 1
     }
   ];
+// Funkcia na zamiešanie otázok
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
 
+        // Zamiešaj otázky pri načítaní
+        shuffle(questions);
         let currentQuestion = 0;
         let scores = [0, 0, 0];
         let teamAnswers = [null, null, null];
